# vllm-dockerized

./: README.md  compose.yaml  dockerfile  pyproject.toml  serve.sh  setup.sh
